--- a/desafios/desafio01/estilos/mensagens.css
+++ b/desafios/desafio01/estilos/mensagens.css
@@ -7,14 +7,14 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #8F8EBF;
+    background-color: #f77f00;
 }
 
 h1 {
     font-weight: bolder;
     font-size: 2.5em;
     padding: 20px;
-    color: white;
+    color: #fcbf49;
 }
 
 header {
@@ -22,7 +22,7 @@ header {
 }
 
 section {
-    background-color: #2E4159;
+    background-color: #003049;
     width: 800px;
     margin: auto;
     padding: 30px;
@@ -42,7 +42,7 @@ div {
 
 a {
     text-decoration: underline;
-    color: white;
+    color: #b7b7b7;
 }
 
 a:hover {
@@ -54,5 +54,5 @@ footer {
     font-weight: bolder;
     text-align: center;
     padding: 8px;
-    color: white;
+    color: #b7b7b7;
 }
