--- a/desafios/desafio03/estilos/ad.css
+++ b/desafios/desafio03/estilos/ad.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #127369;
+    background-color: dodgerblue;
 }
 
 header {
@@ -15,7 +15,7 @@ header {
     font-weight: bolder;
     font-size: 1.5em;
     padding: 10px;
-    color: #8AA6A3;
+    color: #fff;
 }
 
 section {
@@ -23,7 +23,7 @@ section {
     width: 500px;
     border-radius: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.378);
-    background-color: #BFBFBF;
+    background-color: deepskyblue;
 }
 
 div {
@@ -33,27 +33,27 @@ div {
 
 .btn1 {
     padding: 10px;
-    border-radius: 8px;
+    border-radius: 2px;
     font-weight: bold;
     color: black;
-    background-color: white;
+    background-color: whitesmoke;
 }
 
 a {
     cursor: pointer;
-    color: #4C5958;
+    color: whitesmoke;
 }
 
 a:hover {
     transition: 0.3s;
-    color: #8AA6A3;
+    color: rgb(0, 255, 0);
 }
 
 
 footer {
     text-align: center;
-    font-weight: bold;
+    font-weight: bolder;
     font-style: italic;
     padding: 10px;
-    color: #4C5958
+    color: whitesmoke;
 }
