--- a/exercicios/Aula 13/modelo2/estilos/modelo2.css
+++ b/exercicios/Aula 13/modelo2/estilos/modelo2.css
@@ -34,3 +34,9 @@ footer {
     text-align: center;
     font-style: italic;
 }
+
+#foto {
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+}
