--- a/exercicios/Aula 16exe/modelo1/src/style.css
+++ b/exercicios/Aula 16exe/modelo1/src/style.css
@@ -19,13 +19,22 @@ section {
     background-color: white;
 }
 
-div {
-    padding: 8px;
+#flista {
+    width: 167px;
+}
+
+option {
+    text-align: center; 
 }
 
 a {
    color: white;
    text-decoration: none;
+}
+
+a:hover {
+    transition: 0.3s;
+    color: rgb(0, 255, 0);
 }
 
 footer {
