--- a/desafios/desafio04/src/calculartroco.css
+++ b/desafios/desafio04/src/calculartroco.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    padding-bottom: 50px;
+    padding: 20px 0px 50px 0px;
     text-align: center;
     font-weight: bolder;
     color: white;
@@ -30,7 +30,7 @@ div {
     border: none;
     font-weight: bolder;
     cursor: pointer;
-    background-color: lightskyblue;
+    background-color: rgb(0, 0, 0);
     color: white;
     
     animation-name: animacao;
@@ -56,7 +56,7 @@ div {
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-    background-color: black;
+    background-color: rgb(31, 30, 30);
 }
 
 footer {
