--- a/desafios/desafio05/src/conversor.css
+++ b/desafios/desafio05/src/conversor.css
@@ -22,6 +22,13 @@ main {
     text-align: center;
 }
 
+.config {
+    margin: auto;
+    text-align: start;
+    font-weight: bolder;
+    width: 450px;
+}
+
 .btn1 {
     padding: 20px;
     border-radius: 70px;
