--- a/desafios/desafio06/src/conversor-temperatura.css
+++ b/desafios/desafio06/src/conversor-temperatura.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: content-box;
 }
 
 body {
@@ -28,6 +28,7 @@ section {
     width: 400px;
     height: 200px;
     border-radius: 7px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.453);
     background-color: white;
 }
 
