--- a/desafios/desafio05/src/conversor-medidas.css
+++ b/desafios/desafio05/src/conversor-medidas.css
@@ -22,11 +22,14 @@ main {
     text-align: center;
 }
 
-.config {
+#res {
     margin: auto;
-    text-align: start;
-    font-weight: bolder;
-    width: 450px;
+    padding: 40px;
+    width: 600px;
+    height: 400px;
+    border-radius: 7px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.453);
+    background-color: white;
 }
 
 .btn1 {
