--- a/desafios/desafio06/src/conversor-temperatura.css
+++ b/desafios/desafio06/src/conversor-temperatura.css
@@ -19,17 +19,19 @@ header {
 }
 
 section {
-    text-align: center;
-}
-
-.div1 {
     margin: auto;
+    text-align: center;
     padding: 40px;
     width: 400px;
     height: 200px;
     border-radius: 7px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.453);
     background-color: white;
+}
+
+.res {
+    text-align: start;
+    font-size: 15px;
 }
 
 .btn1 {
